--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "postgres": "^3.4.3",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "wrangler": "^3.22.4"
+    "wrangler": "4"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.4.1",
